Scopes in Image Viewer (On Viewer setting) are not updating #61061

Closed
opened 2019-01-31 14:44:14 +01:00 by Raymond Doetjes · 6 comments

System Information
Operating system: Windows 10
Graphics card: GTX680 SLI

Blender Version
Broken:
blender-2.80.0-git.8c8979067490-windows64

Short description of error
When you are in compositing mode, and you open a second window in Image editor with the scopes open. The data in the scopes doesn't update when you manipulate the image.
Or even swap the image out.

Exact steps for others to reproduce the error
(see flv file)
2019-01-31 14-41-14.flv

**System Information** Operating system: Windows 10 Graphics card: GTX680 SLI **Blender Version** Broken: blender-2.80.0-git.8c8979067490-windows64 **Short description of error** When you are in compositing mode, and you open a second window in Image editor with the scopes open. The data in the scopes doesn't update when you manipulate the image. Or even swap the image out. **Exact steps for others to reproduce the error** (see flv file) [2019-01-31 14-41-14.flv](https://archive.blender.org/developer/F6464900/2019-01-31_14-41-14.flv)

Added subscriber: @SubliminalArtist

Added subscriber: @SubliminalArtist

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-31 15:41:27 +01:00

Seems like the scopes are only updated when you change the waveform mode. Even when you just change the image displayed in the image editor (not using the viewer output).

(Also, I've contacted the authorities. Release that poor man!)

Seems like the scopes are only updated when you change the waveform mode. Even when you just change the image displayed in the image editor (not using the viewer output). (Also, I've contacted the authorities. Release that poor man!)

You called the cops???... Oh Balls!! That’s what the guy in the boot would say (if he still was alive ;) )

Thanks guys for your great service, once again.

You called the cops???... Oh Balls!! That’s what the guy in the boot would say (if he still was alive ;) ) Thanks guys for your great service, once again.

This issue was referenced by e7dfe15702

This issue was referenced by e7dfe15702bf60700fbedea80f84fbace16970d2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61061
No description provided.